# Israeli-Radio-Manager

./: .firebaserc  .gitignore  COMPLETE_DEPLOYMENT.md  DASHBOARD_LIBRARIAN_UPDATE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY_2026-01-13.md  DESIGN_SYSTEM.md  Dockerfile  FIREBASE_AUTH_FIX.md  LIBRARIAN_INTEGRATION_SUMMARY.md  LICENSE  LOGIN_BACKGROUND_UPDATE.md  LOGIN_DEPLOYMENT.md  LOGIN_MINIMAL_UPDATE.md  LOGIN_NEON_UPDATE.md  LOGIN_PAGE_IMPROVEMENTS.md  MIGRATION_REPORT.md  README.md  apphosting.yaml  docker-compose.yml  firebase.json  package-lock.json
backend/: .dockerignore  .env.example  AUDIT_FIX_SUMMARY.md  BACKUP_QUICK_START.md  BACKUP_SYSTEM.md  Dockerfile  FIX_GCS_SERVICE.md  LIBRARIAN_OVERVIEW.md  LIBRARIAN_UPDATE.md  apphosting.yaml  check_migration_status.py  cleanup_drive_fields.py  cleanup_drive_index.py  cleanup_mongodb_drive_fields.py  migrate_drive_to_gcs.py  pyproject.toml  requirements.txt  test_gcs.py  verify_gcs_migration.py
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  confirmation.py  decisions.py  modes.py  orchestrator.py  prompts.py  tasks.py
backend/app/models/: __init__.py  agent.py  commercial_campaign.py  content.py  flow.py  librarian.py  schedule.py  settings.py  user.py
backend/app/routers/: __init__.py  admin.py  agent.py  calendar.py  campaigns.py  content.py  flows.py  playback.py  schedule.py  settings.py  upload.py  users.py  voices.py  websocket.py
backend/app/services/: __init__.py  ai_agent_service.py  (+29 more)
backend/scripts/: setup_backup_scheduler.sh  setup_librarian_schedulers.sh
(+148 files in other folders)
