[project]
name = "israeli-radio-manager"
version = "0.1.0"
description = "Israeli Radio Manager Backend"
authors = [
    {name = "Developer"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "motor (>=3.7.1,<4.0.0)",
    "pymongo (>=4.15.5,<5.0.0)",
    "python-vlc (>=3.0.21203,<4.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "google-api-python-client (>=2.187.0,<3.0.0)",
    "google-auth-httplib2 (>=0.3.0,<0.4.0)",
    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
    "twilio (>=9.9.0,<10.0.0)",
    "pywebpush (>=2.1.2,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "google-cloud-storage (>=3.1.1,<4.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "psutil (>=7.2.1,<8.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "chatterbox-tts (>=0.1.6,<0.2.0)",
    "torch (>=2.5.0,<3.0.0)",
    "torchaudio (>=2.5.0,<3.0.0)",
    "soundfile (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
